force-app/main/default/objects/Doctor_Suggestion__c/Doctor_Suggestion__c.object-meta.xml
<CustomObject>
    <label>Doctor Suggestion</label>
    <nameField>
        <displayFormat>DS-{00000}</displayFormat>
        <label>DS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctor Suggestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>