force-app/main/default/objects/Doctor_Suggestion__c/fields/ABHA_ID__c.field-meta.xml
<CustomField>
    <fullName>ABHA_ID__c</fullName>
    <formula>Doctor_Appointment_No__r.Patient__r.ABHA_ID__c</formula>
    <label>ABHA ID</label>
    <type>Text</type>
</CustomField>