force-app/main/default/objects/Doctor_Suggestion__c/fields/Do_you_want_to_go_for_claim_of_insurance__c.field-meta.xml
<CustomField>
    <fullName>Do_you_want_to_go_for_claim_of_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you want to go for claim of insurance</label>
    <type>Checkbox</type>
</CustomField>