force-app/main/default/objects/Doctor_Suggestion__c/fields/Do_you_want_to_go_for_second_opinion__c.field-meta.xml
<CustomField>
    <fullName>Do_you_want_to_go_for_second_opinion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you want to go for second opinion?</label>
    <type>Checkbox</type>
</CustomField>