force-app/main/default/objects/Doctor_Suggestion__c/fields/Doctor_Appointment_No__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Appointment_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Appointment No</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Doctor Suggestions</relationshipLabel>
    <relationshipName>Doctor_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>