force-app/main/default/objects/Doctor_Suggestion__c/fields/Doctors_Opinion__c.field-meta.xml
<CustomField>
    <fullName>Doctors_Opinion__c</fullName>
    <label>Doctors Opinion</label>
    <type>TextArea</type>
</CustomField>