force-app/main/default/objects/Doctor_Suggestion__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Doctor Suggestions</relationshipLabel>
    <relationshipName>Doctor_Suggestions</relationshipName>
    <type>Lookup</type>
</CustomField>