force-app/main/default/objects/Doctor_Suggestion__c/fields/Suggested_Medicines__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Medicines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suggested Medicines</label>
    <type>Checkbox</type>
</CustomField>